update profilu bez przesłania nazwy profilu do listy tasków

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="save_button">Zapisz</string>
     <string name="title_activity_card_view">CardViewActivity</string>
     <string name="emptyTitle">Nazwa zadania nie może być pusta</string>
+    <string name="emptyProfileName">Nazwa profilu nie może być pusta</string>
     <string name="emptyDate">Data zadania nie może być pusta</string>
     <string name="pickDate">Wybierz datę</string>
 
@@ -18,5 +19,6 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="edit_profile">Edytuj profil</string>
 
 </resources>
