--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="stworz_profil">Stwórz profil</string>
     <string name="return_button">Powrót</string>
     <string name="save_button">Zapisz</string>
+    <string name="add_button">Dodaj</string>
     <string name="title_activity_card_view">CardViewActivity</string>
     <string name="emptyTitle">Nazwa zadania nie może być pusta</string>
     <string name="emptyProfileName">Nazwa profilu nie może być pusta</string>
