--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="humidity_label">Wilgotność:</string>
     <string name="wind_speed_label">Prędkość wiatru:</string>
     <string name="close_button_label">Zamknij</string>
+    <string name="mark_task_as_done">Oznacz jako wykonane</string>
+    <string name="notify_me">Powiadom mnie!</string>
+    <string name="new_task">Utwórz Zadanie</string>
 </resources>
