--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,13 @@
     <string name="new_profile">Stwórz nowy profil</string>
     <string name="profiles">Profile</string>
     <string name="profile">Profil</string>
-    <string name="nazwa_profilu">Nazwa profilu</string>
-    <string name="zmien_zdjecie">Zmień zdjęcie</string>
-    <string name="stworz_nowy_profil">Stwórz nowy profil</string>
-    <string name="stworz_profil">Stwórz profil</string>
+    <string name="profile_name">Nazwa profilu</string>
+    <string name="change_photo">Zmień zdjęcie</string>
+    <string name="create_profil_title">Stwórz profil</string>
     <string name="return_button">Powrót</string>
     <string name="save_button">Zapisz</string>
     <string name="add_button">Dodaj</string>
-    <string name="title_activity_card_view">CardViewActivity</string>
+    <string name="title_activity_card_view" translatable="false">CardViewActivity</string>
     <string name="emptyTitle">Nazwa zadania nie może być pusta</string>
     <string name="emptyProfileName">Nazwa profilu nie może być pusta</string>
     <string name="emptyDate">Data zadania nie może być pusta</string>
@@ -18,17 +17,17 @@
     <string name="checkWeather">Sprawdź pogodę</string>
     <string name="location_permission_denied">Odmowa dostępu do lokalizacji</string>
 
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
+    <string name="next" translatable="false">Next</string>
+    <string name="previous" translatable="false">Previous</string>
     <string name="edit_profile">Edytuj profil</string>
     <string name="service_not_available">Serwis niedostępny</string>
     <string name="no_addresses_found">Brak znalezionego adresu</string>
     <string name="weather_download_fail">Nie udało się pobrać pogody</string>
 
     <!-- Weather popup -->
-    <string name="weather_popup_title">Pogoda w %s:</string>
+    <string name="weather_popup_title">"Pogoda w %s: "</string>
     <string name="temperature_label">Temperatura: %d°C</string>
     <string name="feels_like_temperature_label">Odczuwalna temperatura: %d°C</string>
     <string name="humidity_label">Wilgotność: %d%%</string>
@@ -40,5 +39,5 @@
     <string name="no_camera_found">Nie wykryto żadnego aparatu</string>
     <string name="add_task_title_hint">Podaj tytuł zadania</string>
     <string name="add_task_desc_hint">Dodaj opis</string>
-    <string name="geocoder_error">Geocoder Error</string>
+    <string name="geocoder_error">Błąd Geocodera</string>
 </resources>
