Popup do usunięcia profilu

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -33,4 +33,7 @@
     <string name="add_task_title_hint">Set title</string>
     <string name="add_task_desc_hint">Set description</string>
     <string name="geocoder_error">Geocoder error</string>
+    <string name="confirmation_message">Do you want to delete profile %s?</string>
+    <string name="yes">Yes</string>
+    <string name="No">No</string>
 </resources>
