--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -33,11 +33,12 @@
     <string name="add_task_title_hint">Set title</string>
     <string name="add_task_desc_hint">Set description</string>
     <string name="geocoder_error">Geocoder error</string>
-    <string name="confirmation_message">Do you want to delete profile %s?</string>
+    <string name="confirmation_message">Do you want to delete %s?</string>
     <string name="yes">Yes</string>
     <string name="No">No</string>
     <string name="sort_by_date_asc">Date: From Earliest</string>
     <string name="sort_by_date_desc">Date: From Latest</string>
     <string name="sort_by_name_asc">Name: From \"A\" to \"Z\"</string>
     <string name="sort_by_name_desc">Name: From \"Z\" to \"A\"</string>
+    <string name="is_done">Done?</string>
 </resources>
